objects/Legal_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Box_Document_Link__c</fullName>
        <description>The link for the shared box link for this quote</description>
        <label>Box Document Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Webhook__c</fullName>
        <description>To hold the id of the webhook</description>
        <label>Box Webhook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Legal_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Counsel_Name__c</fullName>
        <label>External Counsel (Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Law firm has uploaded an invoice - When a document is sent from a law firm to the link (BOX) provided for invoices the user must get a notification.</description>
        <label>Invoice Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Received_Box_Link__c</fullName>
        <label>Invoice Received Box Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Received_WebhookId__c</fullName>
        <label>Invoice Received WebhookId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Law Firm, External Legal Counsel</inlineHelpText>
        <label>Law Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Legal_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Quote_Request__c</fullName>
        <label>Legal Quote Request</label>
        <referenceTo>Legal_Quote_Request__c</referenceTo>
        <relationshipName>Legal_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Motivation_Comments__c</fullName>
        <inlineHelpText>Provide any comments or motivation regarding this Legal Quote submission.</inlineHelpText>
        <label>Motivation / Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Panel_Type__c</fullName>
        <label>Panel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Panel</fullName>
                    <default>true</default>
                    <label>On Panel</label>
                </value>
                <value>
                    <fullName>Off Panel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Amount_Rollup__c</fullName>
        <label>Quote Amount</label>
        <summarizedField>Legal_Quote_Item__c.Fee_Excl_VAT__c</summarizedField>
        <summaryForeignKey>Legal_Quote_Item__c.Legal_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Amount__c</fullName>
        <label>Quote Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The individual that legal quotes approvals will be routed to.</description>
        <inlineHelpText>The individual that legal quotes approvals will be routed to.</inlineHelpText>
        <label>Quote Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Legal_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_for_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request for Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Box_Webhook__c</fullName>
        <label>Supplier_Box_Webhook</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>LEAP - Legal Quote Amount Lock</label>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Legal Quote #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Quotes</pluralLabel>
    <recordTypes>
        <fullName>Legal_Quote</fullName>
        <active>true</active>
        <label>Legal Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_Quote_Locked</fullName>
        <active>true</active>
        <label>Legal Quote (Locked)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Litigation_Quote</fullName>
        <active>true</active>
        <label>Litigation Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Litigation_Quote_Locked</fullName>
        <active>true</active>
        <label>Litigation Quote (Locked)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Off_Panel_Quote</fullName>
        <active>true</active>
        <label>Off Panel Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Off_Panel_Quote_Locked</fullName>
        <active>true</active>
        <label>Off Panel Quote (Locked)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ensure_Law_Firm_on_Legal_Quote_is_valid</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Off Panel Quote&quot;, Law_Firm__r.RecordType.DeveloperName  = &quot;On/Off Panel Law Firm&quot;, 
Law_Firm__r.Approved__c = true)</errorConditionFormula>
        <errorDisplayField>Law_Firm__c</errorDisplayField>
        <errorMessage>Ensure that the Law Firm is an Off Panel Law Firm</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Quote_Amount_Once_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISCHANGED (Quote_Amount__c ), 
ISPICKVAL( Status__c , &apos;Approved&apos;))</errorConditionFormula>
        <errorDisplayField>Quote_Amount__c</errorDisplayField>
        <errorMessage>Quote amount not editable for an approved legal quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_one_requested_service_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED( Request_for_Service__c),Request_for_Service__c, Legal_Quote_Request__r.Requested_Services__c=1)</errorConditionFormula>
        <errorDisplayField>Request_for_Service__c</errorDisplayField>
        <errorMessage>Only one requested service allowed - There is already another Legal Quote that has been requested.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RFS_must_remain_blank_unless_Approved</fullName>
        <active>true</active>
        <description>Request for Service must not be checked unless Status = Approved.</description>
        <errorConditionFormula>AND( Request_for_Service__c , NOT(ISPICKVAL(Status__c, &apos;Approved&apos;)))</errorConditionFormula>
        <errorDisplayField>Request_for_Service__c</errorDisplayField>
        <errorMessage>A quote has to have an Approved status in order to select Request for Service</errorMessage>
    </validationRules>
</CustomObject>